[tool.poetry]
name = "smt"
version = "0.1.0"
description = ""
authors = ["Aputalabashuneba"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic-settings = "^2.0.3"
black = "^23.11.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.29.0"
alembic = "^1.12.1"
passlib = "^1.7.4"
pip = "^23.3.1"
install = "^1.3.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
fastapi-cache2 = "^0.2.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
